s3: Simplify solr URI parsing