@@ -374,8 +374,8 @@ public class SolrSearchApiImpl implements SolrSearchApi {
   private URI getSolrUri(List<NameValuePair> params, Site site) throws SolrUndefinedException {
     try {
       URL solrServer = runtimeConfiguration.getSolrUrl();
-      return new URL(solrServer, "/select?" + URLEncodedUtils.format(params, "UTF-8")).toURI();
-    } catch (MalformedURLException | URISyntaxException e) {
+      return new URI(solrServer + "/select?" + URLEncodedUtils.format(params, "UTF-8"));
+    } catch (URISyntaxException e) {
       throw new IllegalArgumentException(e);
     }
   }
